--- a/templates/brandNew.html
+++ b/templates/brandNew.html
@@ -14,7 +14,7 @@
 			<form action="#" method = "post" enctype=multipart/form-data>
 				<div class="form-group">
 				<label for="name">Name:</label>
-				<input type ="text" class="form-control" maxlength="100" name="name"/>
+				<input type ="text" class="form-control" maxlength="100" required name="name"/>
 
 
 				<div class="padding-bottom"></div>
