--- a/templates/modelNew.html
+++ b/templates/modelNew.html
@@ -14,15 +14,15 @@
 			<form action="#" method = "post" enctype=multipart/form-data>
 				<div class="form-group">
 					<label for="name">Name:</label>
-					<input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the course">
+					<input type ="text" maxlength="50" class="form-control" required name="name"placeholder="Lap top model name">
 
 					<label for="description">Description:</label>
-					<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the course"></textarea>
+					<textarea class="form-control" maxlength="250" rows="3" name="description" required placeholder="Description of the model"></textarea>
 
 					<label for="price">Price:</label>
 					<div class="input-group">
 						<div class="input-group-addon">$</div>
-						<input type ="number" class="form-control" maxlength="10" name="price" placeholder="Price in $">
+						<input type ="number" class="form-control" maxlength="10" name="price" required placeholder="Price in $">
 					</div>
 					<label for="photo">photo:</label>
 					    <input type="file" name="photo" id="photo">
