--- a/templates/brandNew.html
+++ b/templates/brandNew.html
@@ -32,7 +32,7 @@
 
 				<div class="padding-bottom"></div>
 					<label for="photo">photo:</label>
-					    <input type="file" name="photo" id="photo">
+					    <input type="file" required name="photo" id="photo">
 					<div class="padding-bottom"></div>
 				<button type="submit" class="btn btn-default" id="submit" type="submit">
 				<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
